0023279: Accessing NULL pointer

Assuring the pointer is not 'NULL'.